RIME & 200kHz-harmonics rejection

--- a/JUICE-CDF-HF-SID20_sample.ipynb
+++ b/JUICE-CDF-HF-SID20_sample.ipynb
@@ -91,6 +91,7 @@
     "# *** Unit set ***\n",
     "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
     "time_mode = 0                           # [Time]      0: Epoch   1: data number\n",
+    "gap_mode  = 1                           # [gap]       0: n/a     1: gap\n",
     "\n",
     "# *** Frenquency range in Linear ***\n",
     "# f_mode_min = 80;  f_mode_max = 2068   # 80 - 2068 : as same as SID-4/20\n",
@@ -156,7 +157,7 @@
     "# 202402\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/IRFU/cdf/'        # 202312_FS test folder\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID20_20240201.cdf']\n",
-    "\n",
+    "\"\"\"\n",
     "# 202405 -- dryrun check\n",
     "# LGA\n",
     "data_dir = '/Users/user/0-python/JUICE_data/CCSDS_test_v2/test_TMIDX/2405_dryrun_test/2_LGA-dryrun/'   \n",
@@ -164,6 +165,7 @@
     "                  'JUICE_L1a_RPWI-HF-SID20_20000108T054142-20000108T054318_V01___TMIDX_00001.bin.cdf',  # pc2_LGA-dryrun_RPW-SEQ-01a-1_2024_05_15_15_30_16/TM01\n",
     "                  'JUICE_L1a_RPWI-HF-SID20_20000108T061058-20000108T061531_V01___TMIDX_00000.bin.cdf',  # pc2_LGA-dryrun_RPW-SEQ-01a-2_2024_05_15_16_07_58\n",
     "                 ]\n",
+    "\"\"\"\n",
     "\"\"\""
    ]
   },
@@ -269,6 +271,32 @@
     "print(\"Ch:\", N_ch0, \"  (U:\", data.U_selected[0], \"  V:\", data.V_selected[0], \"  W:\", data.W_selected[0], \")\")\n",
     "print(\"data size:\", data.EuEu.shape, n_time0, n_freq0)\n",
     "print(\"==> Component\", N_component, \"   Num-frequency\", N_frequency, \"  Num-sweep:\", n_time0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99701477",
+   "metadata": {},
+   "source": [
+    "### NaN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90fafe4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "if gap_mode == 1:\n",
+    "    for i in range(n_time0-1):\n",
+    "        if data.scet[i+1]-data.scet[i] > 60:\n",
+    "            print(i, data.epoch[i], i+1, data.epoch[i+1])\n",
+    "            data.EuEu[i]    = math.nan;  data.EvEv[i]    = math.nan;  data.EwEw[i]    = math.nan;  data.EuEu[i+1] = math.nan;     data.EvEv[i+1] = math.nan;     data.EwEw[i+1] = math.nan  \n",
+    "            data.E_DoLuv[i] = math.nan;  data.E_DoLvw[i] = math.nan;  data.E_DoLwu[i] = math.nan;  data.E_DoLuv[i+1] = math.nan;  data.E_DoLvw[i+1] = math.nan;  data.E_DoLwu[i+1] = math.nan; \n",
+    "            data.E_DoCuv[i] = math.nan;  data.E_DoCvw[i] = math.nan;  data.E_DoCwu[i] = math.nan;  data.E_DoCuv[i+1] = math.nan;  data.E_DoCvw[i+1] = math.nan;  data.E_DoCwu[i+1] = math.nan;           \n",
+    "            data.E_ANGuv[i] = math.nan;  data.E_ANGvw[i] = math.nan;  data.E_ANGwu[i] = math.nan;  data.E_ANGuv[i+1] = math.nan;  data.E_ANGvw[i+1] = math.nan;  data.E_ANGwu[i+1] = math.nan;"
    ]
   },
   {
