--- a/JUICE-CDF-HF-SID2_sample.ipynb
+++ b/JUICE-CDF-HF-SID2_sample.ipynb
@@ -90,6 +90,7 @@
     "# *** Unit set ***\n",
     "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
     "time_mode = 0                           # [Time]      0: Epoch   1: data number\n",
+    "gap_mode  = 0                           # [gap]       0: n/a     1: gap\n",
     "\n",
     "# *** Frenquency range in Linear ***\n",
     "f_mode_min = 3000;   f_mode_max = 10000\n",
@@ -110,12 +111,12 @@
    "outputs": [],
    "source": [
     "# *** Flight - Ver.2 ***\n",
-    "\"\"\"\n",
     "# 20240126\n",
     "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/25/'           # CDF data folder\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID2_20240125T112327_V01.cdf',         # 128   Onboard-CAL\n",
     "                  # 'JUICE_L1a_RPWI-HF-SID2_20240125T152238_V01.cdf',       #(512   not used in future)\n",
     "                 ]\n",
+    "\"\"\"\n",
     "\"\"\""
    ]
   },
@@ -127,12 +128,12 @@
    "outputs": [],
    "source": [
     "# *** Ground Test - Ver.2 ***\n",
+    "\"\"\"\n",
     "# 202310 -- SAMPLE\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'         # CDF data folder\n",
     "data_name_list = [#'SID02_20231007-0349.cdf',                               # SG - 1.0MHz 10mVpp 90/0/0deg\n",
     "                  'SID02_20231117-1607.cdf',                                # SG - 1.5MHz 10mVpp 90/0/0deg \n",
     "                 ]\n",
-    "\"\"\"\n",
     "data_name_list = ['SID02-high_20231019-1749.cdf',\n",
     "                  'SID02-high_20231020-1218.cdf',\n",
     "                  'SID02-high_20231020-1222.cdf',\n",
@@ -869,12 +870,56 @@
     "f_min0  = freq_1d[0]; f_max0 = freq_1d[-1]\n",
     "\n",
     "power_str = juice_cdf.power_label(band_mode, unit_mode)\n",
-    "print(power_str, \"   EE:\",   spec.EE.shape,   \"   freq:\", freq_1d[0], \"-\", freq_1d[-1], \"kHz  (df =\", freq_width_1d[0], \"kHz)\" )\n",
-    "\n",
+    "print(power_str, \"   EE:\",   spec.EE.shape,   \"   freq:\", freq_1d[0], \"-\", freq_1d[-1], \"kHz  (df =\", freq_width_1d[0], \"kHz)\" )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "681289e5",
+   "metadata": {},
+   "source": [
+    "### NaN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89979028",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "if gap_mode == 1:\n",
+    "    for i in range(n_time0-1):\n",
+    "        if data.scet[i+1]-data.scet[i] > 60:\n",
+    "            print(i, data.epoch[i], i+1, data.epoch[i+1])\n",
+    "            spec.EE[i]      = math.nan;                                                            spec.EE[i+1]      = math.nan\n",
+    "            spec.EuEu[i]    = math.nan;  spec.EvEv[i]    = math.nan;  spec.EwEw[i]    = math.nan;  spec.EuEu[i+1]    = math.nan;  spec.EvEv[i+1]    = math.nan;  spec.EwEw[i+1]    = math.nan\n",
+    "            spec.E_DoLuv[i] = math.nan;  spec.E_DoLvw[i] = math.nan;  spec.E_DoLwu[i] = math.nan;  spec.E_DoLuv[i+1] = math.nan;  spec.E_DoLvw[i+1] = math.nan;  spec.E_DoLwu[i+1] = math.nan; \n",
+    "            spec.E_DoCuv[i] = math.nan;  spec.E_DoCvw[i] = math.nan;  spec.E_DoCwu[i] = math.nan;  spec.E_DoCuv[i+1] = math.nan;  spec.E_DoCvw[i+1] = math.nan;  spec.E_DoCwu[i+1] = math.nan;           \n",
+    "            spec.E_ANGuv[i] = math.nan;  spec.E_ANGvw[i] = math.nan;  spec.E_ANGwu[i] = math.nan;  spec.E_ANGuv[i+1] = math.nan;  spec.E_ANGvw[i+1] = math.nan;  spec.E_ANGwu[i+1] = math.nan;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8410824",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "EE_2d   = spec.EE.transpose();    EE_med   = np.median(spec.EE, axis=0); \n",
     "EuEu_2d = spec.EuEu.transpose();  EuEu_med = np.median(spec.EuEu, axis=0)\n",
     "EvEv_2d = spec.EvEv.transpose();  EvEv_med = np.median(spec.EvEv, axis=0)\n",
-    "EwEw_2d = spec.EwEw.transpose();  EwEw_med = np.median(spec.EwEw, axis=0)"
+    "EwEw_2d = spec.EwEw.transpose();  EwEw_med = np.median(spec.EwEw, axis=0)\n",
+    "E_DoLuv_2d = spec.E_DoLuv.transpose()\n",
+    "E_DoLvw_2d = spec.E_DoLvw.transpose()\n",
+    "E_DoLwu_2d = spec.E_DoLwu.transpose()\n",
+    "E_DoCuv_2d = spec.E_DoCuv.transpose()\n",
+    "E_DoCvw_2d = spec.E_DoCvw.transpose()\n",
+    "E_DoCwu_2d = spec.E_DoCwu.transpose()\n",
+    "E_ANGuv_2d = spec.E_ANGuv.transpose()\n",
+    "E_ANGvw_2d = spec.E_ANGvw.transpose()\n",
+    "E_ANGwu_2d = spec.E_ANGwu.transpose()"
    ]
   },
   {
@@ -1251,6 +1296,101 @@
     "    png_fname = work_dir+data_name+'_FT-EE.png'\n",
     "    if f_mode == 1:\n",
     "        png_fname = work_dir+data_name+'_FT-EE-log.png'\n",
+    "    fig2d.savefig(png_fname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1da827f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Y-range\n",
+    "f_min0 = f_min;      f_max0 = f_max\n",
+    "if f_mode == 0:\n",
+    "    f_min = f_mode_min;  f_max = f_mode_max\n",
+    "# Z-range\n",
+    "p_min = p_min0;      p_max = p_max0\n",
+    "\n",
+    "fig2d = plt.figure(figsize=[12,33])\n",
+    "ax1 = fig2d.add_subplot(10, 1, 1);  ax2 = fig2d.add_subplot(10, 1, 2);  ax3 = fig2d.add_subplot(10, 1, 3)\n",
+    "ax4 = fig2d.add_subplot(10, 1, 4);  ax5 = fig2d.add_subplot(10, 1, 5);  ax6 = fig2d.add_subplot(10, 1, 6)\n",
+    "ax7 = fig2d.add_subplot(10, 1, 7);  ax8 = fig2d.add_subplot(10, 1, 8);  ax9 = fig2d.add_subplot(10, 1, 9)\n",
+    "if time_mode == 1:\n",
+    "    ax10 = fig2d.add_subplot(10, 1, 10)\n",
+    "\n",
+    "# Y-axis\n",
+    "ax1.set_ylim(f_min0, f_max0);      ax2.set_ylim(f_min0, f_max0);      ax3.set_ylim(f_min0, f_max0)\n",
+    "ax4.set_ylim(f_min0, f_max0);      ax5.set_ylim(f_min0, f_max0);      ax6.set_ylim(f_min0, f_max0)\n",
+    "ax7.set_ylim(f_min0, f_max0);      ax8.set_ylim(f_min0, f_max0);      ax9.set_ylim(f_min0, f_max0)\n",
+    "if f_mode == 1:\n",
+    "    ax1.set_yscale('log');         ax2.set_yscale('log');             ax3.set_yscale('log')\n",
+    "    ax4.set_yscale('log');         ax5.set_yscale('log');             ax6.set_yscale('log')\n",
+    "    ax7.set_yscale('log');         ax8.set_yscale('log');             ax9.set_yscale('log')\n",
+    "ax1.set_ylabel('Frequency [kHz]'); ax2.set_ylabel('Frequency [kHz]'); ax3.set_ylabel('Frequency [kHz]')\n",
+    "ax4.set_ylabel('Frequency [kHz]'); ax5.set_ylabel('Frequency [kHz]'); ax6.set_ylabel('Frequency [kHz]')\n",
+    "ax7.set_ylabel('Frequency [kHz]'); ax8.set_ylabel('Frequency [kHz]'); ax9.set_ylabel('Frequency [kHz]')\n",
+    "\n",
+    "# X-axis\n",
+    "ax1.set_title(\"[\" + data_name + \"]  \" + 'Deg. Lin. uv');     ax2.set_title('Deg. Lin. vw');     ax3.set_title('Deg. Lin. wu')\n",
+    "ax4.set_title('Deg. Cir. uv');     ax5.set_title('Deg. Cir. vw');     ax6.set_title('Deg. Cir. wu')\n",
+    "ax7.set_title('Ang. uv');          ax8.set_title('Ang. vw');          ax9.set_title('Ang. wu')\n",
+    "if time_mode == 1:\n",
+    "    ax10.set_xlabel(str_date)\n",
+    "else:\n",
+    "    ax9.set_xlabel(str_date)\n",
+    "\n",
+    "# Plot\n",
+    "if time_mode == 1:\n",
+    "    p1 = ax1.pcolormesh(num_1d, freq_1d, E_DoLuv_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='Oranges')\n",
+    "    p2 = ax2.pcolormesh(num_1d, freq_1d, E_DoLvw_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='Oranges')\n",
+    "    p3 = ax3.pcolormesh(num_1d, freq_1d, E_DoLwu_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='Oranges')\n",
+    "    p4 = ax4.pcolormesh(num_1d, freq_1d, E_DoCuv_2d, norm=colors.Normalize(vmin=-1.01, vmax=1.01), cmap='bwr')\n",
+    "    p5 = ax5.pcolormesh(num_1d, freq_1d, E_DoCvw_2d, norm=colors.Normalize(vmin=-1.01, vmax=1.01), cmap='bwr')\n",
+    "    p6 = ax6.pcolormesh(num_1d, freq_1d, E_DoCwu_2d, norm=colors.Normalize(vmin=-1.01, vmax=1.01), cmap='bwr')\n",
+    "    p7 = ax7.pcolormesh(num_1d, freq_1d, E_ANGuv_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='bwr')\n",
+    "    p8 = ax8.pcolormesh(num_1d, freq_1d, E_ANGvw_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='bwr')\n",
+    "    p9 = ax9.pcolormesh(num_1d, freq_1d, E_ANGwu_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='bwr')\n",
+    "    p10 = ax10.plot(np.ravel(data.epoch[:]), '.')\n",
+    "    pp9 = fig2d.colorbar(p9, ax=ax10, orientation=\"vertical\"); pp9.set_label(power_str)\n",
+    "else:\n",
+    "    p1 = ax1.pcolormesh(Epoch_1d, freq_1d, E_DoLuv_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='Oranges')\n",
+    "    p2 = ax2.pcolormesh(Epoch_1d, freq_1d, E_DoLvw_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='Oranges')\n",
+    "    p3 = ax3.pcolormesh(Epoch_1d, freq_1d, E_DoLwu_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='Oranges')\n",
+    "    p4 = ax4.pcolormesh(Epoch_1d, freq_1d, E_DoCuv_2d, norm=colors.Normalize(vmin=-1.01, vmax=1.01), cmap='bwr')\n",
+    "    p5 = ax5.pcolormesh(Epoch_1d, freq_1d, E_DoCvw_2d, norm=colors.Normalize(vmin=-1.01, vmax=1.01), cmap='bwr')\n",
+    "    p6 = ax6.pcolormesh(Epoch_1d, freq_1d, E_DoCwu_2d, norm=colors.Normalize(vmin=-1.01, vmax=1.01), cmap='bwr')\n",
+    "    p7 = ax7.pcolormesh(Epoch_1d, freq_1d, E_ANGuv_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='bwr')\n",
+    "    p8 = ax8.pcolormesh(Epoch_1d, freq_1d, E_ANGvw_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='bwr')\n",
+    "    p9 = ax9.pcolormesh(Epoch_1d, freq_1d, E_ANGwu_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='bwr')\n",
+    "pp1 = fig2d.colorbar(p1, ax=ax1, orientation=\"vertical\");  pp1.set_label(power_str)\n",
+    "pp2 = fig2d.colorbar(p2, ax=ax2, orientation=\"vertical\");  pp2.set_label(power_str)\n",
+    "pp3 = fig2d.colorbar(p3, ax=ax3, orientation=\"vertical\");  pp3.set_label(power_str)\n",
+    "pp4 = fig2d.colorbar(p4, ax=ax4, orientation=\"vertical\");  pp1.set_label(power_str)\n",
+    "pp5 = fig2d.colorbar(p5, ax=ax5, orientation=\"vertical\");  pp2.set_label(power_str)\n",
+    "pp6 = fig2d.colorbar(p6, ax=ax6, orientation=\"vertical\");  pp3.set_label(power_str)\n",
+    "pp7 = fig2d.colorbar(p7, ax=ax7, orientation=\"vertical\");  pp1.set_label(power_str)\n",
+    "pp8 = fig2d.colorbar(p8, ax=ax8, orientation=\"vertical\");  pp2.set_label(power_str)\n",
+    "pp9 = fig2d.colorbar(p9, ax=ax9, orientation=\"vertical\");  pp3.set_label(power_str)\n",
+    "\n",
+    "# X-axis\n",
+    "if time_mode == 1:\n",
+    "    xlim=[num_1d[0], num_1d[-1]]\n",
+    "    ax10.set_xlim(xlim)\n",
+    "else:\n",
+    "    E_min = '2024-01-26 08:40:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
+    "    E_max = '2024-01-26 09:40:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  \n",
+    "    xlim=[t_min, t_max]\n",
+    "    xlim=[Epoch_1d[0], Epoch_1d[-1]]\n",
+    "ax1.set_xlim(xlim); ax2.set_xlim(xlim); ax3.set_xlim(xlim); ax4.set_xlim(xlim); ax5.set_xlim(xlim)\n",
+    "ax6.set_xlim(xlim); ax7.set_xlim(xlim); ax8.set_xlim(xlim); ax9.set_xlim(xlim)\n",
+    "\n",
+    "plt.show()\n",
+    "if dump_mode == 1:\n",
+    "    png_fname = work_dir+data_name+'_AngT.png'\n",
+    "    if f_mode == 1:\n",
+    "        png_fname = work_dir+data_name+'_AngT-log.png'\n",
     "    fig2d.savefig(png_fname)"
    ]
   },
