--- a/JUICE-CDF-HF-SID3_sample.ipynb
+++ b/JUICE-CDF-HF-SID3_sample.ipynb
@@ -6,7 +6,7 @@
    "id": "a116756d",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID3 (Full): L1a QL -- 2024/7/22"
+    "# JUICE RPWI HF SID3 (Full): L1a QL -- 2024/7/24"
    ]
   },
   {
@@ -86,6 +86,7 @@
     "# *** Unit set ***\n",
     "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
     "time_mode = 1                           # [Time]      0: Epoch   1: data number\n",
+    "gap_mode  = 1                           # [gap]       0: n/a     1: gap\n",
     "\n",
     "# *** Frenquency range in Linear ***\n",
     "f_mode_min = 80;  f_mode_max = 2068     # 80 - 2068 : as same as SID-4/20\n",
@@ -138,8 +139,8 @@
     "# *** Ground Test - Ver.2 ***\n",
     "# 202310 -- SAMPLE\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folder\n",
-    "data_name_list = [# 'SID03_20231024-0036.cdf',\n",
-    "                  'SID03-2ch-comp0-20231117-1438.cdf',\n",
+    "data_name_list = [#'SID03_20231024-0036.cdf',\n",
+    "                  #'SID03-2ch-comp0-20231117-1438.cdf',\n",
     "                  'SID03-2ch-comp1-20231117-1448.cdf',\n",
     "                  'SID03-2ch-comp2-20231117-1500.cdf',\n",
     "                  'SID03-3ch-comp0-20231117-1424.cdf',\n",
@@ -233,8 +234,6 @@
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20240614T161148-20240614T162539_V01___TMIDX_00000.bin.cdf',  \n",
     "                 ]\n",
     "\n",
-    "\"\"\"\n",
-    "\"\"\"\n",
     "# 202407 -- LEGA check\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202407_FS/cdf_20240716/'\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20240716T152808-20240716T153933_V01.cdf',\n",
@@ -454,24 +453,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ac3fbef",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "i = n_time0-1\n",
-    "print(data.frequency[0][60:80])\n",
-    "print(data.num_NC[i][60:80]+data.num_RC[i][60:80]+data.num_LC[i][60:80])\n",
-    "print(data.num_NC[i]+data.num_RC[i]+data.num_LC[i])\n",
-    "# for j in range(n_freq0):\n",
-    "#    print(j, data.frequency[i][j], data.num_NC[i][j]+data.num_RC[i][j]+data.num_LC[i][j])\n",
-    "#    # print(i, j, data.frequency[i][j], data.num_NC[i][j]+data.num_RC[i][j]+data.num_LC[i][j], data.num_NC[i][j], data.num_RC[i][j], data.num_LC[i][j], data.BG_Eu[i][j], data.BG_Ev[i][j], data.BG_Ew[i][j])\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "abb78ac3",
    "metadata": {},
    "outputs": [],
@@ -514,6 +495,32 @@
   },
   {
    "cell_type": "markdown",
+   "id": "51c62a47",
+   "metadata": {},
+   "source": [
+    "### NaN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6fabe9f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "if gap_mode == 1:\n",
+    "    for i in range(n_time0-1):\n",
+    "        if data.scet[i+1]-data.scet[i] > 60:\n",
+    "            print(i, data.epoch[i], i+1, data.epoch[i+1])\n",
+    "            data.EuEu[i]    = math.nan;  data.EvEv[i]    = math.nan;  data.EwEw[i]    = math.nan;  data.EuEu[i+1] = math.nan;     data.EvEv[i+1] = math.nan;     data.EwEw[i+1] = math.nan  \n",
+    "            data.E_DoLuv[i] = math.nan;  data.E_DoLvw[i] = math.nan;  data.E_DoLwu[i] = math.nan;  data.E_DoLuv[i+1] = math.nan;  data.E_DoLvw[i+1] = math.nan;  data.E_DoLwu[i+1] = math.nan; \n",
+    "            data.E_DoCuv[i] = math.nan;  data.E_DoCvw[i] = math.nan;  data.E_DoCwu[i] = math.nan;  data.E_DoCuv[i+1] = math.nan;  data.E_DoCvw[i+1] = math.nan;  data.E_DoCwu[i+1] = math.nan;           \n",
+    "            data.E_ANGuv[i] = math.nan;  data.E_ANGvw[i] = math.nan;  data.E_ANGwu[i] = math.nan;  data.E_ANGuv[i+1] = math.nan;  data.E_ANGvw[i+1] = math.nan;  data.E_ANGwu[i+1] = math.nan;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Data for checks"
@@ -531,33 +538,23 @@
     "freq_width_1d  = data.freq_width[0].tolist()\n",
     "freq_width1    = freq_width_1d[0:N_frequency]\n",
     "\n",
-    "EuEu_2d = data.EuEu.transpose()\n",
-    "EvEv_2d = data.EvEv.transpose()\n",
-    "EwEw_2d = data.EwEw.transpose()\n",
+    "EuEu_2d = data.EuEu.transpose();  EvEv_2d = data.EvEv.transpose();  EwEw_2d = data.EwEw.transpose()\n",
     "if comp_mode > 0:    # Matrix\n",
-    "    E_DoLuv_2d = data.E_DoLuv.transpose()\n",
-    "    E_DoLvw_2d = data.E_DoLvw.transpose()\n",
-    "    E_DoLwu_2d = data.E_DoLwu.transpose()\n",
-    "    E_DoCuv_2d = data.E_DoCuv.transpose()\n",
-    "    E_DoCvw_2d = data.E_DoCvw.transpose()\n",
-    "    E_DoCwu_2d = data.E_DoCwu.transpose()\n",
-    "    E_ANGuv_2d = data.E_ANGuv.transpose()\n",
-    "    E_ANGvw_2d = data.E_ANGvw.transpose()\n",
-    "    E_ANGwu_2d = data.E_ANGwu.transpose()\n",
+    "    E_DoLuv_2d = data.E_DoLuv.transpose();  E_DoLvw_2d = data.E_DoLvw.transpose();  E_DoLwu_2d = data.E_DoLwu.transpose()\n",
+    "    E_DoCuv_2d = data.E_DoCuv.transpose();  E_DoCvw_2d = data.E_DoCvw.transpose();  E_DoCwu_2d = data.E_DoCwu.transpose()\n",
+    "    E_ANGuv_2d = data.E_ANGuv.transpose();  E_ANGvw_2d = data.E_ANGvw.transpose();  E_ANGwu_2d = data.E_ANGwu.transpose()\n",
     "freq_width_2d  = data.freq_width.transpose()\n",
+    "\"\"\"\n",
     "if band_mode == 1:\n",
-    "    EuEu_2d = EuEu_2d / freq_width_2d / 1000\n",
-    "    EvEv_2d = EvEv_2d / freq_width_2d / 1000\n",
-    "    EwEw_2d = EwEw_2d / freq_width_2d / 1000\n",
-    "    \"\"\"\n",
+    "    EuEu_2d = EuEu_2d/freq_width_2d/1000\n",
+    "    EvEv_2d = EvEv_2d/freq_width_2d/1000\n",
+    "    EwEw_2d = EwEw_2d/freq_width_2d/1000\n",
     "    print(\"frequency width:\", freq_width1)\n",
-    "    \"\"\"\n",
-    "#\n",
+    "\"\"\"#\n",
     "f_min0 = freq_1d[0]\n",
     "f_max0 = freq_1d[N_frequency-1]\n",
     "power_str = juice_cdf.power_label(band_mode, unit_mode)\n",
     "print(power_str, \"   f_MAX/min:\", f_max0, f_min0)\n",
-    "\n",
     "# print(freq1); print(freq_width1)"
    ]
   },
@@ -597,7 +594,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p_max = np.ceil(np.log10( np.amax( [np.amax(data.EuEv_re), np.amax(data.EvEw_re), np.amax(data.EwEu_re), np.amax(data.EuEv_im), np.amax(data.EvEw_im), np.amax(data.EwEu_im)] ) )*5)/5\n",
+    "p_max = np.ceil(np.log10( np.nanmax( [np.amax(data.EuEv_re), np.nanmax(data.EvEw_re), np.nanmax(data.EwEu_re), np.nanmax(data.EuEv_im), np.nanmax(data.EvEw_im), np.nanmax(data.EwEu_im)] ) )*5)/5\n",
+    "print(\"  p_max:\", p_max)\n",
+    "nan = float('NaN')\n",
+    "if math.isnan(p_max):\n",
+    "    p_max = p_raw_max\n",
     "print(\"  p_max:\", p_max)"
    ]
   },
@@ -661,17 +662,18 @@
     "    ax6.plot(np.ravel(data.E_ANGvw), '-g', linewidth=0.8, label='vw')\n",
     "    ax6.plot(np.ravel(data.E_ANGwu), '-b', linewidth=0.6, label='wu')\n",
     "\n",
+    "\"\"\"\n",
     "if comp_mode == 2:    # Matrix\n",
-    "    ax1.plot(np.ravel(data.EuEu_NC), '-r', linewidth=1.2, label='uu')\n",
-    "    ax1.plot(np.ravel(data.EvEv_NC), '-g', linewidth=0.8, label='vv')\n",
-    "    ax1.plot(np.ravel(data.EwEw_NC), '-b', linewidth=0.5, label='ww')\n",
-    "    ax1.plot(np.ravel(data.EuEu_RC), '.r', linewidth=1.2, label='uu')\n",
-    "    ax1.plot(np.ravel(data.EvEv_RC), '.g', linewidth=0.8, label='vv')\n",
-    "    ax1.plot(np.ravel(data.EwEw_RC), '.b', linewidth=0.5, label='ww')\n",
-    "    ax1.plot(np.ravel(data.EuEu_LC), '_r', linewidth=1.2, label='uu')\n",
-    "    ax1.plot(np.ravel(data.EvEv_LC), '_g', linewidth=0.8, label='vv')\n",
-    "    ax1.plot(np.ravel(data.EwEw_LC), '_b', linewidth=0.5, label='ww')\n",
-    "  \n",
+    "    ax1.plot(np.ravel(data.EuEu_NC), '-r', linewidth=1.2, label='uu_NC')\n",
+    "    ax1.plot(np.ravel(data.EvEv_NC), '-g', linewidth=0.8, label='vv_NC')\n",
+    "    ax1.plot(np.ravel(data.EwEw_NC), '-b', linewidth=0.5, label='ww_NC')\n",
+    "    ax1.plot(np.ravel(data.EuEu_RC), '.r', linewidth=1.2, label='uu_RC')\n",
+    "    ax1.plot(np.ravel(data.EvEv_RC), '.g', linewidth=0.8, label='vv_RC')\n",
+    "    ax1.plot(np.ravel(data.EwEw_RC), '.b', linewidth=0.5, label='ww_RC')\n",
+    "    ax1.plot(np.ravel(data.EuEu_LC), '_r', linewidth=1.2, label='uu_LC')\n",
+    "    ax1.plot(np.ravel(data.EvEv_LC), '_g', linewidth=0.8, label='vv_LC')\n",
+    "    ax1.plot(np.ravel(data.EwEw_LC), '_b', linewidth=0.5, label='ww_LC')\n",
+    "\n",
     "    ax2.plot(np.ravel(data.EuEv_re_NC), '-r', linewidth=1.0, label='uv_re')\n",
     "    ax2.plot(np.ravel(data.EvEw_re_NC), '-g', linewidth=0.8, label='vw_re')\n",
     "    ax2.plot(np.ravel(data.EwEu_re_NC), '-b', linewidth=0.6, label='wu_re')\n",
@@ -694,6 +696,7 @@
     "    ax6.plot(np.ravel(data.E_ANGuv_NC), '-r', linewidth=1.0, label='uv')\n",
     "    ax6.plot(np.ravel(data.E_ANGvw_NC), '-g', linewidth=0.8, label='vw')\n",
     "    ax6.plot(np.ravel(data.E_ANGwu_NC), '-b', linewidth=0.6, label='wu')\n",
+    "\"\"\"\n",
     "\n",
     "ax1.set_ylabel(power_str);  ax8.set_ylabel('T [degC]');   ax9.set_ylabel('Date-Time')\n",
     "ax8.set_xlabel(str_date)\n",
@@ -737,15 +740,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print(data.epoch)\n",
-    "# print(data.T_HF_FPGA, data.T_RWI_CH1, data.T_RWI_CH2)\n",
-    "# print(freq1)\n",
     "print(data.complex)\n",
     "print(data.cal_signal)\n",
     "print(data.onboard_cal)\n",
-    "print(data.RFI_rejection)\n",
     "print(data.Pol_sep_SW)\n",
-    "print(data.T_RWI_CH2)"
+    "print(data.cal_signal)"
    ]
   },
   {
@@ -812,7 +811,13 @@
     "# peak_f = 55\n",
     "# print (peak_f)  #55\n",
     "for i in range(n_time0):\n",
-    "    print(i, data.complex[i], data.EuEu[i][peak_f], data.EuEu_NC[i][peak_f], data.num_NC[i][peak_f], data.EuEu_RC[i][peak_f], data.num_RC[i][peak_f], data.EuEu_LC[i][peak_f], data.num_LC[i][peak_f], data.EuiEui[i][peak_f], data.EuqEuq[i][peak_f], data.E_DoPuv[i][peak_f], data.E_DoLuv[i][peak_f], data.E_DoCuv[i][peak_f], data.E_ANGuv[i][peak_f])"
+    "    # print(i, data.complex[i], '{:+.2e}'.format(data.EuEu[i][peak_f]), '{:+.2e}'.format(data.EuEu_NC[i][peak_f]), data.num_NC[i][peak_f], '{:+.2e}'.format(data.EuEu_RC[i][peak_f]), data.num_RC[i][peak_f], '{:+.2e}'.format(data.EuEu_LC[i][peak_f]), data.num_LC[i][peak_f], '{:+.2e}'.format(data.EuiEui[i][peak_f]), '{:+.2e}'.format(data.EuqEuq[i][peak_f]))\n",
+    "    # print(i, data.complex[i], '[UV] {:+.1e}'.format(data.EuEu[i][peak_f]),    ' DoP:{:+3.2f}'.format(data.E_DoPuv[i][peak_f]),    ' DoL:{:+3.2f}'.format(data.E_DoLuv[i][peak_f]),    ' DoC:{:+3.2f}'.format(data.E_DoCuv[i][peak_f]),    ' Ang:{:+3.0f}'.format(data.E_ANGuv[i][peak_f]))\n",
+    "    print(i, data.complex[i], '[VW] {:+.1e}'.format(data.EvEv[i][peak_f]),    ' DoP:{:+3.2f}'.format(data.E_DoPvw[i][peak_f]),    ' DoL:{:+3.2f}'.format(data.E_DoLvw[i][peak_f]),    ' DoC:{:+3.2f}'.format(data.E_DoCvw[i][peak_f]),    ' Ang:{:+3.0f}'.format(data.E_ANGvw[i][peak_f]))\n",
+    "    # print(i, data.complex[i], '[WU] {:+.1e}'.format(data.EwEw[i][peak_f]),    ' DoP:{:+3.2f}'.format(data.E_DoPwu[i][peak_f]),    ' DoL:{:+3.2f}'.format(data.E_DoLwu[i][peak_f]),    ' DoC:{:+3.2f}'.format(data.E_DoCwu[i][peak_f]),    ' Ang:{:+3.0f}'.format(data.E_ANGwu[i][peak_f]))\n",
+    "    # print(i, data.complex[i], '[l] {:+.2e}'.format(data.EuEu_NC[i][peak_f]), 'DoP:{:+.2e}'.format(data.E_DoPuv_NC[i][peak_f]), 'DoL:{:+.2e}'.format(data.E_DoLuv_NC[i][peak_f]), 'DoC:{:+.2e}'.format(data.E_DoCuv_NC[i][peak_f]), 'ang:{:+.2e}'.format(data.E_ANGuv_NC[i][peak_f]))\n",
+    "    # print(i, data.complex[i], '[R] {:+.2e}'.format(data.EuEu_RC[i][peak_f]), 'DoP:{:+.2e}'.format(data.E_DoPuv_RC[i][peak_f]), 'DoL:{:+.2e}'.format(data.E_DoLuv_RC[i][peak_f]), 'DoC:{:+.2e}'.format(data.E_DoCuv_RC[i][peak_f]), 'ang:{:+.2e}'.format(data.E_ANGuv_RC[i][peak_f]))\n",
+    "    # print(i, data.complex[i], '[L] {:+.2e}'.format(data.EuEu_LC[i][peak_f]), 'DoP:{:+.2e}'.format(data.E_DoPuv_LC[i][peak_f]), 'DoL:{:+.2e}'.format(data.E_DoLuv_LC[i][peak_f]), 'DoC:{:+.2e}'.format(data.E_DoCuv_LC[i][peak_f]), 'ang:{:+.2e}'.format(data.E_ANGuv_LC[i][peak_f]))"
    ]
   },
   {
@@ -833,7 +838,7 @@
     "# Sweep_num\n",
     "n0 = 0;   n1 = n_time0//2;  n2 = n_time0-1  # 11\n",
     "# Y-range\n",
-    "p_min = p_min0;  p_max = p_max0-2\n",
+    "p_min = p_min0;  p_max = p_max0\n",
     "# X-range\n",
     "f_min = f_min0;  f_max = f_max0\n",
     "if f_mode == 0:\n",
@@ -1030,6 +1035,31 @@
     "    if f_mode == 1:\n",
     "        png_fname = work_dir+data_name+'_FT-log.png'\n",
     "    fig2d.savefig(png_fname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb1e3d71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sweep_num\n",
+    "n0 = 0;   n1 = n_time0//2;  n2 = n_time0-1  # 11\n",
+    "\n",
+    "# Peak\n",
+    "print(f\"[First - {n0}]\")\n",
+    "print(\"Peak EuEu:\", '{:.2e}'.format(EuEu_2d[peak_f][n0]), \"at\", '{:.1f}'.format(freq_1d[peak_f]), \"kHz\")\n",
+    "print(\"Peak EvEv:\", '{:.2e}'.format(EvEv_2d[peak_f][n0]), \"at\", '{:.1f}'.format(freq_1d[peak_f]), \"kHz\")\n",
+    "print(\"Peak EwEw:\", '{:.2e}'.format(EvEv_2d[peak_f][n0]), \"at\", '{:.1f}'.format(freq_1d[peak_f]), \"kHz\")\n",
+    "print(f\"[Mid - {n1}]\")\n",
+    "print(\"Peak EuEu:\", '{:.2e}'.format(EuEu_2d[peak_f][n1]), \"at\", '{:.1f}'.format(freq_1d[peak_f]), \"kHz\")\n",
+    "print(\"Peak EvEv:\", '{:.2e}'.format(EvEv_2d[peak_f][n1]), \"at\", '{:.1f}'.format(freq_1d[peak_f]), \"kHz\")\n",
+    "print(\"Peak EwEw:\", '{:.2e}'.format(EvEv_2d[peak_f][n1]), \"at\", '{:.1f}'.format(freq_1d[peak_f]), \"kHz\")\n",
+    "print(f\"[Last - {n2}]\")\n",
+    "print(\"Peak EuEu:\", '{:.2e}'.format(EuEu_2d[peak_f][n2]), \"at\", '{:.1f}'.format(freq_1d[peak_f]), \"kHz\")\n",
+    "print(\"Peak EvEv:\", '{:.2e}'.format(EvEv_2d[peak_f][n2]), \"at\", '{:.1f}'.format(freq_1d[peak_f]), \"kHz\")\n",
+    "print(\"Peak EwEw:\", '{:.2e}'.format(EvEv_2d[peak_f][n2]), \"at\", '{:.1f}'.format(freq_1d[peak_f]), \"kHz\")\n"
    ]
   },
   {
