--- a/JUICE-CDF-HF-SID4_sample.ipynb
+++ b/JUICE-CDF-HF-SID4_sample.ipynb
@@ -91,6 +91,7 @@
     "# *** Unit set ***\n",
     "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
     "time_mode = 0                           # [Time]      0: Epoch   1: data number\n",
+    "gap_mode  = 1                           # [gap]       0: n/a     1: gap\n",
     "\n",
     "# *** Frenquency range in Linear ***\n",
     "# f_mode_min = 80;  f_mode_max = 2068   # 80 - 2068 : as same as SID-4/20\n",
@@ -267,6 +268,32 @@
     "print(\"Ch:\", N_ch0, \"  (U:\", data.U_selected[0], \"  V:\", data.V_selected[0], \"  W:\", data.W_selected[0], \")\")\n",
     "print(\"data size:\", data.EuEu.shape, n_time0, n_freq0)\n",
     "print(\"==> Component\", N_component, \"   Num-frequency\", N_frequency, \"  Num-sweep:\", n_time0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d87d8018",
+   "metadata": {},
+   "source": [
+    "### NaN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a43e0b23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "if gap_mode == 1:\n",
+    "    for i in range(n_time0-1):\n",
+    "        if data.scet[i+1]-data.scet[i] > 60:\n",
+    "            print(i, data.epoch[i], i+1, data.epoch[i+1])\n",
+    "            data.EuEu[i]    = math.nan;  data.EvEv[i]    = math.nan;  data.EwEw[i]    = math.nan;  data.EuEu[i+1] = math.nan;     data.EvEv[i+1] = math.nan;     data.EwEw[i+1] = math.nan  \n",
+    "            data.E_DoLuv[i] = math.nan;  data.E_DoLvw[i] = math.nan;  data.E_DoLwu[i] = math.nan;  data.E_DoLuv[i+1] = math.nan;  data.E_DoLvw[i+1] = math.nan;  data.E_DoLwu[i+1] = math.nan; \n",
+    "            data.E_DoCuv[i] = math.nan;  data.E_DoCvw[i] = math.nan;  data.E_DoCwu[i] = math.nan;  data.E_DoCuv[i+1] = math.nan;  data.E_DoCvw[i+1] = math.nan;  data.E_DoCwu[i+1] = math.nan;           \n",
+    "            data.E_ANGuv[i] = math.nan;  data.E_ANGvw[i] = math.nan;  data.E_ANGwu[i] = math.nan;  data.E_ANGuv[i+1] = math.nan;  data.E_ANGvw[i+1] = math.nan;  data.E_ANGwu[i+1] = math.nan;"
    ]
   },
   {
